# waveshare-sc15-arm-ws

./: .gitignore  readme.md
config/: arm_traj.yaml  hardware.yaml  jsb.yaml  minimal_arm.urdf
src/sc15_hw_iface_cpp/: CMakeLists.txt  package.xml  plugin_description.xml
src/sc15_hw_iface_cpp/include/sc15_hw_iface_cpp/: sc15_bus.hpp
src/sc15_hw_iface_cpp/src/: sc15_bus.cpp
src/stservo_sdk_py/: package.xml  plugin_description.xml  servo_bridge.py  setup.cfg  setup.py
src/stservo_sdk_py/hardware/: sc15_hw_iface.py
src/stservo_sdk_py/scripts/: sc15_id_burner.py  servo_config.py
